Fix 'Sign In' link text wrapping

--- a/src/components/NavBar/NavBar.styl
+++ b/src/components/NavBar/NavBar.styl
@@ -406,6 +406,7 @@ header.NavBar {
 
     .sign-in {
         padding-right: 1.0rem;
+        white-space: nowrap;
     }
 
 
